<resources>
    <string name="app_name">MyAgenda</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="client_name_field">Client\'s name</string>
    <string name="numbers_of_services_field">Numbers of services</string>
    <string name="date_field">Date</string>
    <string name="hour_field">Hour</string>
    <string name="total_price_field">Total Price</string>
    <string name="service_name">Service name</string>
    <string name="services_item_menu">Services</string>
    <string name="search_item_menu">Search</string>
    <string name="service_duration_item_service">Service duration</string>
    <string name="service_price_item_service">Service\'s price</string>
    <string name="appointment_item_menu">Appointments</string>
    <string name="client_item_menu">Clients</string>
    <string name="fab_add_appointment">Add appointment</string>
    <string name="chipGroup_indicator">Choose services, they will appear below !</string>
    <string name="booking">Booking</string>
    <string name="client_s_name">Client\'s name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="services">Services</string>
    <string name="select_services">Select services</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="addcustomer">addCustomer</string>
    <string name="add_customer">add_customer</string>
    <string name="down_arrow">down arrow</string>
    <string name="section_field">Section</string>
</resources>