<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/shape">

        <TextView
            android:id="@+id/client_name_appoint_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/client_name_field"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/numbers_of_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/numbers_of_services_field"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/client_name_appoint_field"
            app:layout_constraintTop_toBottomOf="@+id/client_name_appoint_field" />

        <TextView
            android:id="@+id/total_price_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/total_price_field"
            android:textColor="#4CAF50"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/numbers_of_services"
            app:layout_constraintStart_toEndOf="@+id/numbers_of_services"
            app:layout_constraintTop_toTopOf="@+id/numbers_of_services" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="@+id/client_name_appoint_field"
            app:layout_constraintStart_toStartOf="@+id/client_name_appoint_field"
            app:layout_constraintTop_toBottomOf="@id/client_name_appoint_field" />

        <TextView
            android:id="@+id/date_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/date_field"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hour_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/sarabun_light"
            android:text="@string/hour_field"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>


